# blenderbase-public

./: README.md  package-lock.json  package.json  source_code.md
src-tauri/: .env-dist  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-018b5b3f7cdec65c72c04e4c5deb2a30644904155da365faf1e766f6289f20ac.json  query-0f07ed4fee42119dcf5c8026f96085366c30af6d90fc69df0ee880ac6659ab9c.json  query-0f3358cbfed3d80dde235b638aab65fbfb72ac93d87e1dc841491f360f8e4011.json  query-1095a354d4f08043572dfa55f2817865c0381aa21ada6cfdbaa2e45209eeae9b.json  query-155ffc147d5b4aebd1c841015d7bdfc034e4dd878f582bdfff04a82b1c14e0aa.json  query-22aa78c0887cf840abb6df595073e19b59364f0994bda41ceb6eac24b6b32e88.json  query-2e81f866da8e0e62348b4cdeafff0d706659318a75d429623971e67a84fd4f42.json  query-3467df51dcc6fcf96fe4e89363f5ab46e9601519a2a3c5cc3719e19c8d70052c.json  query-4b95a85bf209e39ab6d5296cfe9e82aef4778f479da999163a9baece3a1c03f2.json  query-5e09ee707a1c3cc662b3064bf84541c097a8c03b37a4e25144de5a31d6a7ca54.json  query-62c01f115c2f8c3b9b75097ee605d3ed592d9b93ae0037dd5b945943427454ef.json  query-7fe7218d1544268ffe4c384a27973934a0c800ec1c59ecc92a97e6889288349e.json  query-8538ff162864f217be3df8b99294262aba19e30c386d89a146c29dd7fb977757.json  query-8bea87f4add238bc478fed1885406950231d8ae3140ddba67cd4f9e23fbbbca1.json  query-8d6e484e8691ee6551339d1df6f63ec55d14c63f32d37fb72173a6b3696f7aa7.json  query-8f44dd6f0ab4bd613c10fc3f25e9de081b2b97d8d143b34efacaf75fe3e542ae.json  query-91e3b6790644c33967833842dc580b3a23d03eba61a41a7a54bee73674b980e3.json  (+9 more)
src-tauri/capabilities/: default.json  download-file-popup.json
(+155 files in other folders)
