[package]
name = "Blenderbase"
version = "1.1.0"
# description = "Cross-platform external GUI for Blender, addon and blend project file management."
description = "External GUI for Blender and blend project file management."
authors = ["Physical Addons"]
license = "" 
repository = "https://github.com/PhysicalAddons/blenderbase"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# @JJeris was here.
# This code is dedicated to AG <3
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blenderbase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-upload = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
dirs = "6.0.0"
uuid = { version = "1.23.0", features = ["v4"] }
whoami = "2.1.2"
chrono = "0.4.45"
reqwest = { version = "0.13.4", features = ["json"] }
regex = "1.12.3"
zip = "8.6.0"
function_name = "0.3.0"
